--- a/README
+++ b/README
@@ -2,14 +2,14 @@ NAME
     Lingua::SU::Nums2Words - Convert number to Sundanese verbage
 
 VERSION
-    version 0.01
+    version 0.02
 
 SYNOPSIS
      use Lingua::SU::Nums2Words qw(nums2words nums2words_simple);
      binmode(STDOUT, ":utf8");
 
-     print nums2words(123);        # sa-ratus dua puluh tilu
-     print nums2words_simple(123); # hiji dua tilu
+     print nums2words(1023);       # sa-rébu dua puluh tilu
+     print nums2words_simple(109); # hiji kosong salapan
 
 DESCRIPTION
     This module provides two functions, nums2words and nums2words_simple, to
